# slim-trees

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  benchmark.py  benchmark.py.lprof  environment-deprecated.yml  environment.yml  model_parser.py  pixi.toml  pyproject.toml  read_version.sh  setup.cfg
.github/: dependabot.yml  release.yml
.github/scripts/: read_version.sh
.github/workflows/: benchmark.yml  build.yml  ci.yml  scorecard.yml
conda.recipe/: meta.yaml
examples/: .gitignore  benchmark.py  pickle_lgbm.py  pickle_sklearn.py  utils.py
examples/utils/: __init__.py
pickle_compression/: __init__.py  _lgbm_classifier.py  _sklearn_tree.py  compress_model.py  lgbm_booster.py  pickling.py  sklearn_tree.py
slim_trees/: __init__.py  _version.py  compression.py  compression_utils.py  lgbm_booster.py  pickling.py  sklearn_tree.py  utils.py
tests/: conftest.py  test_compression_utils.py  test_core.py  test_lgbm_compression.py  test_sklearn_compression.py  test_util.py  util.py
