[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
target-version = ["py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

select = [
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # pylint
    "PL",
    # tidy
    "TID",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP"
]
ignore = [
    # variable in function should be lowercase
    "N806",
]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.tbump.version]
current = "0.0.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:\.(?P<extra>.+))?
'''

[[tool.tbump.field]]
name = "extra"
default = ""

[[tool.tbump.file]]
src = "pickle_compression/_version.py"
version_template = '({major}, {minor}, {patch}, "{extra}")'
search = "version_info = {current_version}"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
