[metadata]
name = pickle-compression
version = attr: pickle_compression._version.__version__
description = A python package for efficient pickling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavelzw/pickle-compression
author = Pavel Zwerschke
author_email = pavelzw@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
install_requires =
    numpy
python_requires = >=3.8
packages = find:


[options.extra_require]
scikit-learn =
    scikit-learn
lightgbm =
    lightgbm

[options.packages.find]
include =
    pickle_compression
