[metadata]
name = slim-trees
version = attr: slim_trees._version.__version__
description = A python package for efficient pickling of ML models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantco/slim-trees
author = Pavel Zwerschke
author_email = pavel.zwerschke@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
    numpy
python_requires = >=3.8
packages = find:


[options.extras_require]
scikit-learn =
    scikit-learn
lightgbm =
    lightgbm
